brat/test/golden/error/vectorise-type-mismatch.brat
panic :: Vec(Nat, 1)
panic = 2 of 42
