brat/test/golden/error/vectorise-type-mismatch.brat.golden
Error in test/golden/error/vectorise-type-mismatch.brat on line 2:
panic = 2 of 42
        ^^^^^^^

  Type error: Got: Vector of length 2
Expected: (a1 :: Vec(Nat, 1))


